<resources>
    <string name="app_name">Pokemap</string>

    <string name="action_settings">Settings</string>
    <string name="action_reset_from_current_position">Reset From Current Position</string>
    <string name="action_reset_from_marker_position">Reset From Marker Position</string>
    action_reset_from_marker_position
    <string name="action_filter">Filter</string>
    <string name="action_clear_markers">Clear Markers</string>
    <string name="action_remove_search_point">Remove Search Point Marker</string>
    <string name="action_map_satellite">Satellite</string>
    <string name="action_map_terrain">Terrain</string>
    <string name="action_map_type">Switch Map Type</string>



    <string name="pref_cat_user_account">User Account</string>
    <string name="pref_warning">NOTE: Do NOT use your main account for this application!
        Instead, create and use a fake Pokémon Trainer Club account with a different password and email.</string>
    <string name="pref_username">Set Username</string>
    <string name="pref_username_key">UsernameKey</string>
    <string name="pref_default_username">John Doe</string>
    <string name="pref_password">Set Password</string>
    <string name="pref_password_key">PasswordKey</string>
    <string name="pref_default_password">***</string>
    <string name="pref_filtered_pokemon_key">FilteredPokemonKey</string>

    <string name="pref_steps_key">StepsKey</string>
    <string name="pref_steps_title">Set Steps</string>
    <string name="pref_default_steps">10</string>

    <string name="pref_cat_scanning_settings">Scanning Settings</string>

    <string name="pref_cat_general">General</string>
    <string name="pref_pokestops_title">Show Pokéstops</string>
    <string name="pref_pokestops_key">show_pokestops</string>
    <string name="pref_gyms_title">Show Gyms</string>
    <string name="pref_gyms_key">show_gyms</string>

    <string name="toast_credentials">Can\'t login. Please check your credentials</string>
    <string name="title_activity_poke_map">Pokemon Nearby</string>

    <string name="login_warning">It is recommended to
    instead create and use a fake Pokémon Trainer Club account with a different password and email or
        use a Google account not attached to your Pokemon Go account. As using this app could result in your account being </string>
    <string name="prompt_username">Username Or Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">Field Required</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_warning_title">Warning:</string>

    <string name="request_credentials_title">Insert your Pokemon Go credentials</string>
    <string name="search_pokemon_map_suggestion">(Long press on map to change searching position)</string>
    <string name="remember_me">Remember Me</string>
    <string name="get_directions">Get Directions</string>
    <string name="add_to_filter">Add to Filter</string>
    <string name="notification_service_title">Pokémap Service</string>
    <string name="notification_service_scanning">Scanning</string>
    <string name="notification_service_stop">Stop Service</string>
    <string name="notification_service_pokemon_near">" Pokémon nearby."</string>
    <string name="notification_service_pokemon_in_area">" Pokémon in area:"</string>
    <string name="ban">banned</string>
    <string name="minutes">"minutes"</string>
    <string name="meters">meters</string>
    <string name="share_location">Share Location</string>
    <string name="serbii_link">http://serebii.net/pokemongo/pokemon/%1$s.png</string>
    <string name="searching_text">Searching...</string>
    <string name="action_set_tracker_type">Tracker Type</string>
    <string name="follow_tracker_text">Follow Tracker</string>
    <string name="location_tracker_text">Location Tracker</string>
    <string name="no_marker_placed_error_text">No Marker has been placed. Please place a marker on the map</string>
    <string name="search_marker_removed_text">Search marker removed</string>
    <string name="map_not_initialized_error">The map is not initialized.</string>
    <string name="waiting_on_location_text">Waiting on location...</string>
    <string name="parameterised_pokedex_url">http://www.pokemon.com/uk/pokedex/%1$s</string>
    <string name="google_places_search_error">Error occured searching for location</string>
    <string name="marked_pokemon">Marked Pokemon</string>
    <string name="custom_location_points">Custom Location Points</string>
    <string name="action_hide_search_markers">Hide search markers</string>
    <string name="action_show_search_markers">Show search markers</string>
    <string name="action_clear_all_search_markers">Clear all search markers</string>
    <string name="action_scan_interval">Scan Interval In Seconds</string>
    <string name="input_interval_between_scanning_in_seconds">Input interval between scanning in seconds</string>
    <string name="input_in_seconds">Input in seconds</string>
    <string name="add_custom_point">Add Custom Point</string>
    <string name="remove_custom_point">Remove Custom Point</string>
    <string name="do_nothing">Do nothing</string>
</resources>
